# open-mimic

./: .gitignore  HANDOFF.md  README.md
compiler/: Cargo.toml  README.md
compiler/src/: checksum.rs  codec.rs  compile.rs  lib.rs  main.rs  manifest.rs  storage.rs
docs/research/: compulab-cl-som-am57x-notes.md  drd-codec-notes.md  hardware-api-map.md  hardware-primary-source-notes.md  instrument-editor-r106-analysis.md  instrument-format.md  mimic-pro-firmware-1.4.18-analysis.md  pearl-mimic-pro-os-research.md  reverse-engineering-map.md  scm-mimic-library-source-notes.md
examples/: multimic-kick.json
tools/: analyze_mos.py  analyze_mup.py  build_multimic_encoded_test.py  build_multimic_noise_experiment.py  build_multimic_preload_test.py  build_multimic_proof.py  capture_mimic_state.sh  drd_codec.py  drd_probe.py  gen_multimic_test_wavs.py  gen_test_vectors.py  mimic_kv.py  mimic_lib.py
tools/ghidra/: DecompileAddresses.java  FindMicModelAccess.java  FindMicStride.java  FindMicTableConsumers.java  FindReferencesToAddresses.java
tools/windows/: mie_window.ps1
