[package]
name = "open-mimic-compiler"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "open_mimic_compiler"
path = "src/lib.rs"

[[bin]]
name = "open-mimic-compile"
path = "src/main.rs"

[dependencies]
anyhow = "1"
flate2 = "1"
hound = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
indexmap = "2"
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
